# QuickPolls

./: .dockerignore  Cargo.toml  Dockerfile  Jenkinsfile  request.http
api/: .gitignore  Cargo.toml  request.http
api/src/: main.rs  state.rs
api/src/api/: controller.rs  routes.rs  socket.rs
api/src/models/: migrate.rs  mod.rs  poll.rs  poll_answer.rs  poll_option.rs
devops/: .gitignore
devops/pipelines/: main.yml
devops/playbooks/: hosts
devops/playbooks/appserver/: install_app.yml  install_docker.yml  install_node_exporter.yml  main.yml
devops/playbooks/monitoring/: install_grafana.yml  install_prometheus.yml  main.yml
devops/playbooks/monitoring/templates/: dashboard.json  prometheus.service.j2  prometheus_config.yml.j2
devops/playbooks/pipelines/: deploy.yml
devops/playbooks/webserver/: node-exporter.service.j2  webserver.yml
devops/terraform/: .gitignore  main.tf  outputs.tf  vars.tf
src/: main.rs  state.rs
src/api/: controller.rs  mod.rs  responses.rs  routes.rs  socket.rs
src/models/: poll_answer.rs  poll_option.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: main.test.js  main.tsx
ui/src/pages/: CreateScreen.tsx  MainScreen.tsx  ResultsScreen.tsx  VoteScreen.tsx
