[package]
name = "proyecto-final"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
socketioxide = "0.13.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}
tracing-subscriber = "0.3.18"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"

